aes go for some test vectors and it looks like it works properly

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,10 @@ Compact_AES.cache/
 Compact_AES.hw/
 Compact_AES.ip_user_files/
 Compact_AES.sim/
+Compact_AES.Xil/
+Compact_AES.runs/
 
 Compact_AES.xpr
+Compact_AES.jou
+Compact_AES.log
+Compact_AES.zip
